algoriddle-kustomize/webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: algoriddlewebui
  labels:
    app: algoriddlewebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: algoriddlewebui
  template:
    metadata:
      labels:
        app: algoriddlewebui
    spec:
      containers:
      - name: web-ui
        image: btymo/algoriddlewebui:v0.1
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
