algoriddle-kustomize/webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: algoriddlewebui-service
spec:
  selector:
    app: algoriddlewebui
  ports:
    - protocol: TCP
      port: 4200
      targetPort: 80
