algoriddle-kustomize/webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
namespace: develop
metadata:
  name: algoriddlewebui-ingress
spec:
  rules:
  - host: algoriddlewebui.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: algoriddlewebui-service
            port:
              number: 4200
